--- a/back/.env
+++ b/back/.env
@@ -2,3 +2,4 @@ PORT = 5550
 HOST = http://localhost:
 DB_URL = mongodb://127.0.0.1:27017/Projets
 JWT_SECRET = nardak
+REFRESH_TOKEN_SECRET = nardak
